fixed search and language select visibiliy

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -54,7 +54,7 @@ a {
 }
 
 .dropdown-item {
-    color: rgba(var(--global-font-color), 0.9) 
+    color: rgba(var(--global-font-color), 0.9)
 }
 
 #searchInput::placeholder {
@@ -65,6 +65,7 @@ a {
 #searchInput:focus {
     background-color: rgba(var(--global-background-color));
     border: none;
+    color: rgba(var(--global-font-color), 0.9);
 }
 
 #searchResults {
@@ -84,12 +85,21 @@ a {
     transform: scale(0.95) !important;
 }
 
+.dropdown-header {
+    color: rgba(var(--global-font-color), 0.9);
+}
+
+.dropdown-header:focus {
+    color: rgba(var(--global-font-color), 1);
+}
+
 .dropdown-item {
     transition: background-color .2s ease, transform .2s ease;
     padding: 0 20px;
 }
 
 .dropdown-item:hover {
+    color:rgba(var(--global-font-color), 1);
     background-color: rgba(var(--global-background-color2), 1);
     transform: scale(1.05)
 }
@@ -98,6 +108,11 @@ a {
     background-color: rgba(var(--global-background-color), 0.7);
     backdrop-filter: blur(15px);
     min-width: 100%;
+}
+
+.form-select {
+    color: rgba(var(--global-font-color), 0.9);
+    background-color: rgba(var(--global-background-color));
 }
 
 #languageSelect+.dropdown-menu {
@@ -147,7 +162,7 @@ p {
 
 .typing-pending,
 .muted-font {
-    color: rgba(var(--global-font-color), 0.5) 
+    color: rgba(var(--global-font-color), 0.5)
 }
 
 .typing-wrong {
@@ -163,8 +178,4 @@ p {
     50% {
         border-color: transparent
     }
-}
-
-.row.g-2 {
-    position: relative
 }
